--- a/task-matching-start/pom.xml
+++ b/task-matching-start/pom.xml
@@ -14,9 +14,6 @@
     <name>task-match-start</name>
 
     <dependencies>
-            <groupId>com.autonavi</groupId>
-            <artifactId>task-matching-service</artifactId>
-        </dependency>
          <dependency>
              <groupId>com.taobao.pandora</groupId>
              <artifactId>taobao-hsf.sar</artifactId>
@@ -57,6 +54,17 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.autonavi</groupId>
+            <artifactId>task-matching-dao</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.autonavi</groupId>
+            <artifactId>task-matching-service</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
