--- a/task-matching-service/src/main/resources/application.yaml
+++ b/task-matching-service/src/main/resources/application.yaml
@@ -1,25 +1,19 @@
 spring:
   datasource:
-    url: jdbc:mysql//localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
     password: wzl123321
     driver-class-name: com.mysql.jdbc.Driver
-      # 指定哪种连接池
-      type: com.alibaba.druid.pool.DruidDataSource
-      druid:
-        #初始化连接数
-        initial-size: 1
-        #最小空闲连接
-        min-idle: 1
-        #最大活动连接
-        max-active: 20
-        #获取连接时测试是否可用
-        test-on-borrow: true
-        #监控页面启动
-        stat-view-servlet:
-          allow: true
+
+    druid:
+      initial-size: 1
+      min-idle: 1
+      max-active: 20
+      test-on-borrow: true
+      stat-view-servlet:
+        allow: true
 
 
 mybatis:
-  config-location: classpath:mybatis/mabatis-config.xml
+  config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/TaskObjMapper.xml
