--- a/task-matching-start/pom.xml
+++ b/task-matching-start/pom.xml
@@ -14,6 +14,16 @@
     <name>task-match-start</name>
 
     <dependencies>
+        <dependency>
+            <groupId>com.autonavi</groupId>
+            <artifactId>task-matching-dao</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.autonavi</groupId>
+            <artifactId>task-matching-service</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
          <dependency>
              <groupId>com.taobao.pandora</groupId>
              <artifactId>taobao-hsf.sar</artifactId>
@@ -65,6 +75,10 @@
             <groupId>com.autonavi</groupId>
             <artifactId>task-matching-service</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.taobao.pandora</groupId>
+            <artifactId>pandora-boot-bootstrap</artifactId>
         </dependency>
     </dependencies>
 
