--- a/task-matching-start/pom.xml
+++ b/task-matching-start/pom.xml
@@ -15,6 +15,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
+        <dependency>
             <groupId>com.autonavi</groupId>
             <artifactId>task-matching-dao</artifactId>
             <version>1.0.0-SNAPSHOT</version>
